@@ -1,7 +1,9 @@
 package Dinkel.Musikman.helper;
 
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 
 public class helper {
 	public static boolean isInteger(String s) {
@@ -16,12 +18,35 @@ public class helper {
 	    return true;
 	}
 	
-	public static boolean isURL(String url) {
+	public static boolean isURL(String StringUrl) {
 		try {
-			new URI(url);
+			URL url = new URL(StringUrl);
+			url.toURI();
 			return true;
-		}catch(URISyntaxException e) {
+		}catch(URISyntaxException | MalformedURLException e) {
 			return false;
 		}
+	}
+	
+	public static String[] getSpotify(String StringUrl) {
+		if(!isURL(StringUrl)) {
+			return null;
+		}
+		if(StringUrl.contains("https://open.spotify.com/")) {
+			String type = null;
+			
+			StringUrl = StringUrl.replace("https://open.spotify.com/", "");
+			if(StringUrl.contains("track/")) {
+				StringUrl = StringUrl.replace("track/", "");
+				type = "track";
+			}
+			if(StringUrl.contains("playlist/")) {
+				StringUrl = StringUrl.replace("playlist/", "");
+				type = "playlist";
+			}
+			String[] split = StringUrl.split("\\?si=");
+			return new String[] {split[0], type};
+		}
+		return null;
 	}
 }
